commit afce27682677049de4c56aa3486f76733e088de4
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Tue Jun 18 16:17:16 2013 +0400

    added crud tests for cluster from ngt_id

commit 48d4bf6c7bd9be306b9a29af7954aa0f3757730c
Merge: 26a3411 539ef69
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Tue Jun 18 14:51:22 2013 +0400

    Merge branch 'preSF' of https://github.com/Mirantis/savanna into preSF

commit 26a3411f38e305d9c2b3f527d0d9dd76587360f2
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Tue Jun 18 14:50:59 2013 +0400

    add new changes according to master branch

commit 539ef69890ea271da929b82951482a9fce2194a6
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Tue Jun 18 13:55:45 2013 +0400

    new chenge

commit c20e36db5c4edfed06fea2c18103947f80b0b3d1
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Tue Jun 18 13:51:20 2013 +0400

    add new tests and changes in tests

commit d9ef75bf59a281257161bb543ac3d396d12a0286
Merge: e671f5b aa68df4
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Tue Jun 18 13:25:00 2013 +0400

    merge branch

commit e671f5ba768b90237161d6369c9aa2c721d5593e
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Tue Jun 18 13:23:46 2013 +0400

    add new tests in integration tests

commit aa68df467fea8dc283dcd5b8551fcb46f82ec2ab
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Tue Jun 18 13:22:33 2013 +0400

    refactoring code

commit 0a87da00f634c37c07ea6ae0a9e6b767ff6a3fb0
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 19:57:18 2013 +0400

    added new changes

commit 73a983bc3cf9500d5eeb43234a6a289a32505d8a
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 19:44:33 2013 +0400

    added low changes in tests

commit ebee7a8d1deff16fd8ac4dd58b88c62302e974a4
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 19:28:35 2013 +0400

    new changes

commit dbf447f7ba5dbd2ab19b4d3ceb63563b93dbf130